[gd_scene load_steps=3 format=2]

[ext_resource path="res://textures/2d/bullet_hole/bullet-hole-pre-flash.png" type="Texture" id=1]
[ext_resource path="res://scripts/BulletMark.gd" type="Script" id=2]

[node name="BulletHoleHolder" type="Spatial"]
script = ExtResource( 2 )

[node name="BulletHole" type="Sprite3D" parent="."]
transform = Transform( 0.12, 0, 0, 0, 0.12, 0, 0, 0, 1, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="BulletFlash" type="SpotLight" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -1.42048 )
light_color = Color( 1, 0.92549, 0.729412, 1 )
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 1.0
spot_range = 2.9
spot_angle = 8.3

[node name="BulletFlashRemover" type="Timer" parent="."]
wait_time = 0.082
one_shot = true
autostart = true

[node name="BulletHoleRemover" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true
[connection signal="timeout" from="BulletFlashRemover" to="." method="_on_BulletFlashRemover_timeout"]
[connection signal="timeout" from="BulletHoleRemover" to="." method="_on_BulletHoleRemover_timeout"]
